@@ -27,19 +27,19 @@ public class BookController {
     BookService bookService;
 
     public String show(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     public String showArray(Long[] id) {
-        return String.format("%d - The Stand", id[0]);
+        return "%d - The Stand".formatted(id[0]);
     }
 
     public String showPrimitive(long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     public String showPrimitiveArray(long[] id) {
-        return String.format("%d - The Stand", id[0]);
+        return "%d - The Stand".formatted(id[0]);
     }
 
     public void showVoidReturn(List<String> jobNames) {
@@ -52,22 +52,22 @@ public class BookController {
 
     @Executable
     public static String showStatic(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     @Executable
     public static String showArrayStatic(Long[] id) {
-        return String.format("%d - The Stand", id[0]);
+        return "%d - The Stand".formatted(id[0]);
     }
 
     @Executable
     public static String showPrimitiveStatic(long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     @Executable
     public static String showPrimitiveArrayStatic(long[] id) {
-        return String.format("%d - The Stand", id[0]);
+        return "%d - The Stand".formatted(id[0]);
     }
 
     @Executable
@@ -81,51 +81,51 @@ public class BookController {
     }
 
     String showPackageProtected(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     protected String showProtected(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     private String showPrivate(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     @ReflectiveAccess
     protected String showProtectedReflectiveAccess(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     @ReflectiveAccess
     private String showPrivateReflectiveAccess(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     @Executable
     static String showPackageProtectedStatic(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     @Executable
     static protected String showProtectedStatic(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     static private String showPrivateStatic(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     @ReflectiveAccess
     @Executable
     static protected String showProtectedReflectiveAccessStatic(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
     @ReflectiveAccess
     @Executable
     static private String showPrivateReflectiveAccessStatic(Long id) {
-        return String.format("%d - The Stand", id);
+        return "%d - The Stand".formatted(id);
     }
 
 }
